frontend/src/styles.scss
@use "sass:color";

/* Theme */
$bg: #11131f;
$active-bg: #000000;
$hover-bg: #12131e;
$fg: #fff;
$nav-bg: $bg;
$title-fg: #2055e3;

$taproot: #eba814;
$taproot-light: #d5a90a;
$taproot-dark: #9d7c05;

/* Bootstrap */
$body-bg: $bg;
$body-color: $fg;
$gray-800: $bg;
$gray-700: $fg;

$nav-tabs-link-active-bg: $active-bg;

$primary: #007cfa;
$secondary: #272f4e;
$tertiary: #6225b2;
$success: #0aab2f;
$info: #00ddff;

$h5-font-size: 1.15rem !default;

$pagination-bg: $body-bg;
$pagination-border-color: $gray-800;
$pagination-disabled-bg:           $fg;
$pagination-disabled-border-color: $bg;
$pagination-active-color:          $fg;
$pagination-active-bg:             $tertiary;
$pagination-hover-bg:              $hover-bg;
$pagination-hover-border-color:     $bg;
$pagination-disabled-bg:          $bg;

$form-select-indicator-color: $fg;

$link-color:                $info;
$link-decoration:           none !default;
$link-hover-color:          color.adjust($link-color, $lightness: -15%) !default;
$link-hover-decoration:     underline !default;

$dropdown-bg: $bg;
$dropdown-link-color: $fg;

$dropdown-link-hover-color: $fg;
$dropdown-link-hover-bg: $active-bg;

$dropdown-link-active-color: $fg;
$dropdown-link-active-bg: $active-bg;

@use "bootstrap/scss/bootstrap" with (
  $body-bg: $body-bg,
  $body-color: $body-color,
  $gray-800: $gray-800,
  $gray-700: $gray-700,
  $nav-tabs-link-active-bg: $nav-tabs-link-active-bg,
  $primary: $primary,
  $secondary: $secondary,
  $success: $success,
  $info: $info,
  $h5-font-size: $h5-font-size,
  $pagination-bg: $pagination-bg,
  $pagination-border-color: $pagination-border-color,
  $pagination-disabled-bg: $pagination-disabled-bg,
  $pagination-disabled-border-color: $pagination-disabled-border-color,
  $pagination-active-color: $pagination-active-color,
  $pagination-active-bg: $pagination-active-bg,
  $pagination-hover-bg: $pagination-hover-bg,
  $pagination-hover-border-color: $pagination-hover-border-color,
  $form-select-indicator-color: $form-select-indicator-color,
  $link-color: $link-color,
  $link-decoration: $link-decoration,
  $link-hover-color: $link-hover-color,
  $link-hover-decoration: $link-hover-decoration,
  $dropdown-bg: $dropdown-bg,
  $dropdown-link-color: $dropdown-link-color,
  $dropdown-link-hover-color: $dropdown-link-hover-color,
  $dropdown-link-hover-bg: $dropdown-link-hover-bg,
  $dropdown-link-active-color: $dropdown-link-active-color,
  $dropdown-link-active-bg: $dropdown-link-active-bg
);

.input-group-text {
  background-color: #1c2031 !important;
  border: 1px solid #20263e !important;
}

:root {
  --bg: #{$bg};
  --active-bg: #{$active-bg};
  --hover-bg: #{$hover-bg};
  --fg: #{$fg};
  --nav-bg: #{$nav-bg};
  --nav-icon: #fff;
  --nav-shadow: #000;
  --title-fg: #{$title-fg};

  --primary: #{$primary};
  --secondary: #{$secondary};
  --tertiary: #{$tertiary};
  --success: #{$success};
  --info: #{$info};
  --link-color: #{$link-color};
  --link-hover-color: #{$link-hover-color};
  --icon: #f1f1f1;
  --skeleton-bg: #2e324e;
  --skeleton-bg-light: #5d6182;

  --box-bg: #171c2a;
  --stat-box-bg: #0b1018;
  --border-subtle: rgba(255, 255, 255, 0.11);
  --block-top: #232838;
  --block-side: #191c27;
  --block-goggles-overlay: #181b2d7f;
  --mempool-block-top: #403834;
  --mempool-block-side: #2d2825;
  --mempool-block-loading: #554b45;
  --alert-bg: #3a1c61;
  --navbar-bg: #212121;
  --transparent-fg: #ffffffbb;
  --footer-fg: rgba(255, 255, 255, 0.4);
  --fade-out-box-bg-start: rgba(23, 28, 42, 0);
  --fade-out-box-bg-end: rgba(23, 28, 42, 1);
  --opacity: 0.57;
  --world-map-bg: #272b3f;
  --world-map-border: #000;

  --testnet: #1d486f;
  --signet: #6f1d5d;
  --regtest: #7d7d7d;
  --liquid: #116761;
  --liquidtestnet: #494a4a;

  --mainnet-alt: #9339f4;
  --testnet-alt: #183550;
  --signet-alt: #471850;
  --regtest-alt: #4a4a4a;
  --liquidtestnet-alt: #272e46;

  --taproot: #eba814;
  --taproot-light: #d5a90a;
  --taproot-dark: #9d7c05;

  --green: #83fd00;
  --red: #ff3d00;
  --yellow: #fff000;
  --grey: #7e7e7e;
  --tooltip-grey: #b1b1b1;
  --orange: #ff9f00;
  --pink: #e83e8c;

  --search-button: #4d2d77;
  --search-button-border: #472a6e;
  --search-button-focus: #533180;
  --search-button-shadow: #7c58ab80;
  
  --bs-body-color: var(--fg);
  --bs-body-bg: var(--active-bg);
  --bs-card-color: var(--fg);
  --bs-border-radius: 0.25rem;
  --bs-btn-border-color: transparent;
  --bs-btn-disabled-border-color: transparent;
}

html, body {
  height: 100%;
}

body {
  background-color: var(--active-bg);
  color: var(--fg);
  padding-bottom: 60px;
}

.container {
  position: relative;
}

main {
  margin-top: 24px;
}

.full-height {
  @media (max-width: 767.98px) {
    min-height: 100vh;
  }
}

:focus {
  outline: none !important;
}

.box {
  min-height: 1px;
  padding: 1.25rem;
  position: relative;
  min-width: 0;
  word-wrap: break-word;
  background-color: var(--box-bg);
  background-clip: border-box;
  border: 1px solid rgba(0,0,0,.125);
  box-shadow: 0.125rem 0.125rem 0.25rem rgba(0,0,0,0.075);
}

.preview-box {
  min-height: 520px;
  padding: 1rem 3rem 1.5rem;
}

@media (max-width: 767.98px) {
  .box {
    padding: 0.75rem;
  }
}

.navbar-nav.liquid > .active {
  background-color: var(--liquid) !important;
}

.navbar-nav.testnet > .active {
  background-color: var(--testnet) !important;
}

.navbar-nav.signet > .active {
  background-color: var(--signet) !important;
}

.navbar-nav.liquidtestnet > .active {
  background-color: var(--liquidtestnet) !important;
}
.form-control, .form-select {
  color: var(--fg);
  background-color: var(--secondary);
  border: 1px solid rgba(17, 19, 31, 0.2);
}

.form-control:focus {
  color: var(--fg);
  background-color: var(--secondary);
  border-color: rgba(17, 19, 31, 0.2);
}
/* ... */

